--- a/blog.html
+++ b/blog.html
@@ -13,76 +13,80 @@
             font-family: "Noto Sans TC", "PingFang TC", sans-serif; 
             background-color: #fcfcfc; 
             margin: 0; color: #333; 
-            padding-top: 100px;
+            padding-top: 120px; /* 增加頂部間距，讓標題與 Nav Bar 更有呼吸感 */
         }
 
-        /* ✨ 全站統一導覽列 (與 Index, About 一致) */
+        /* 導覽列：採用與 About/Index 完全一致的參數 */
         nav { 
             position: fixed; top: 0; left: 0; width: 100%; height: 75px; 
-            background: rgba(252, 252, 252, 0.85); 
+            background: rgba(252, 252, 252, 0.9); 
             backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
             display: flex; align-items: center; justify-content: center; 
             border-bottom: 0.5px solid rgba(0,0,0,0.06); 
             z-index: 9999; 
         }
         nav a { 
-            margin: 0 18px; text-decoration: none; 
+            margin: 0 15px; text-decoration: none; 
             color: #999; font-size: 13px; font-weight: 400;
             transition: 0.3s; letter-spacing: 0.15em;
             text-transform: uppercase;
         }
         nav a:hover { color: #111; }
 
-        .container { max-width: 900px; margin: 0 auto; padding: 40px 25px; }
+        /* ✨ 限制卡片容器寬度：從 900px 改為 750px */
+        .container { 
+            max-width: 750px; 
+            margin: 0 auto; 
+            padding: 0 25px; 
+        }
 
-        /* 標題區：恢復為「UXUI設計筆記」 */
-        .page-header { margin-bottom: 60px; text-align: left; }
+        .page-header { margin-bottom: 50px; }
         .page-title { 
-            font-size: 1.8rem; font-weight: 500; color: #111; 
-            letter-spacing: 0.15em; margin: 0;
+            font-size: 1.7rem; font-weight: 500; color: #111; 
+            letter-spacing: 0.1em; margin: 0;
         }
 
-        /* 文章清單排版 (恢復原本的設計) */
         #post-list {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 40px;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
         }
 
+        /* 文章卡片：維持直角 */
         .post-item {
             display: block;
             text-decoration: none;
             color: inherit;
             background: #fff;
             border: 1px solid #eee;
-            padding: 40px;
+            padding: 35px;
             transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
         }
 
         .post-item:hover {
             border-color: #111;
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.03);
+            transform: translateY(-3px);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.02);
         }
 
         .post-date { font-size: 11px; color: #bbb; letter-spacing: 0.1em; display: block; margin-bottom: 12px; }
-        .post-item h2 { font-size: 1.4rem; font-weight: 500; margin: 0 0 15px 0; color: #111; line-height: 1.4; }
-        .post-excerpt { font-size: 14px; color: #888; line-height: 1.8; font-weight: 300; margin: 0; }
+        .post-item h2 { font-size: 1.3rem; font-weight: 500; margin: 0 0 12px 0; color: #111; line-height: 1.5; }
+        .post-excerpt { font-size: 14px; color: #777; line-height: 1.8; font-weight: 300; margin: 0; }
 
         footer {
-            padding: 100px 0 40px;
+            padding: 100px 0 60px;
             text-align: center; font-size: 9px; color: #ccc;
             letter-spacing: 0.3em;
             text-transform: uppercase;
         }
 
-        /* 📱 手機版適應：確保全站 Nav Bar 高度與間距一模一樣 */
+        /* 📱 手機版修復 */
         @media (max-width: 600px) {
+            body { padding-top: 100px; }
             nav { height: 65px; }
-            nav a { margin: 0 10px; font-size: 11px; letter-spacing: 0.1em; }
-            .container { padding: 20px 20px; }
-            .post-item { padding: 30px 20px; }
-            .page-title { font-size: 1.5rem; }
+            nav a { margin: 0 10px; font-size: 11px; }
+            .post-item { padding: 25px 20px; }
+            .page-title { font-size: 1.4rem; }
         }
     </style>
 </head>
@@ -101,7 +105,7 @@
         </header>
 
         <div id="post-list">
-            <p style="color: #ccc;">Loading posts...</p>
+            <p style="color: #ccc;">Loading...</p>
         </div>
     </main>
 
