--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>DESIGN WITH KIRSTEN</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
 
@@ -14,13 +13,12 @@
             font-family: "Noto Sans TC", "PingFang TC", sans-serif; 
             background-color: #fcfcfc; 
             margin: 0; color: #333; 
-            overflow-x: hidden;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
 
-        /* 導覽列 (與 Resources 對齊) */
+        /* ✨ 導覽列：完全對齊 Resources 頁面 */
         nav { 
             position: fixed; top: 0; left: 0; width: 100%; height: 75px; 
             background: rgba(252, 252, 252, 0.85); 
@@ -44,8 +42,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 100px 20px 60px;
-            position: relative;
+            padding: 120px 20px 60px;
         }
 
         .profile-pic {
@@ -54,24 +51,16 @@
             object-fit: cover;
             border: 1px solid #eee;
             margin-bottom: 30px;
-            transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
         }
 
         .hero h1 {
-            font-size: 1.8rem;
-            font-weight: 500;
-            letter-spacing: 0.4em;
-            margin: 0 0 12px 0;
-            color: #111;
+            font-size: 1.8rem; font-weight: 500;
+            letter-spacing: 0.4em; margin-bottom: 12px; color: #111;
         }
 
         .hero p {
-            font-size: 0.8rem;
-            font-weight: 300;
-            color: #aaa;
-            letter-spacing: 0.25em;
-            margin-bottom: 45px;
-            text-transform: uppercase;
+            font-size: 0.8rem; font-weight: 300; color: #aaa;
+            letter-spacing: 0.25em; margin-bottom: 45px;
         }
 
         .btn-group {
@@ -80,7 +69,7 @@
             gap: 15px;
             width: 100%;
             max-width: 320px;
-            margin-bottom: 35px; /* 為下方的 Icon 留空間 */
+            margin-bottom: 40px;
         }
 
         .cta-btn {
@@ -89,34 +78,43 @@
             border: 1px solid #111;
             text-decoration: none;
             color: #111;
-            font-size: 12px;
+            font-size: 11px;
             font-weight: 500;
-            letter-spacing: 0.1em;
-            transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+            letter-spacing: 0.15em;
+            transition: 0.3s;
             background: #fff;
         }
 
         .cta-btn:hover {
             background: #111;
             color: #fff;
+        }
+
+        /* 社交 Icon 區域 */
+        .social-links {
+            display: flex;
+            gap: 25px;
+            align-items: center;
+        }
+
+        .social-links a {
+            color: #bbb;
+            transition: 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .social-links a:hover {
+            color: #111;
             transform: translateY(-2px);
         }
 
-        /* ✨ 社交 Icon 樣式 */
-        .social-icons {
-            display: flex;
-            gap: 25px;
-            margin-top: 10px;
-        }
-        .social-icons a {
-            color: #bbb; /* 低調的淺灰色 */
-            font-size: 20px;
-            transition: 0.3s;
-            text-decoration: none;
-        }
-        .social-icons a:hover {
-            color: #111; /* 懸停變深 */
-            transform: translateY(-2px);
+        /* 固定 SVG 圖標大小 */
+        .social-links svg {
+            width: 22px;
+            height: 22px;
+            fill: currentColor; /* 跟隨文字顏色 */
         }
 
         footer {
@@ -129,8 +127,7 @@
         @media (max-width: 600px) {
             nav { height: 65px; }
             nav a { margin: 0 12px; font-size: 11px; }
-            .hero h1 { font-size: 1.4rem; letter-spacing: 0.3em; }
-            .profile-pic { width: 90px; height: 90px; }
+            .hero h1 { font-size: 1.4rem; }
             .btn-group { max-width: 280px; }
         }
     </style>
@@ -156,12 +153,12 @@
             <a href="about.html" class="cta-btn">想認識我更多嗎？</a>
         </div>
 
-        <div class="social-icons">
-            <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" title="Instagram">
-                <i class="fa-brands fa-instagram"></i>
+        <div class="social-links">
+            <a href="https://www.instagram.com/kirsten_uxui/" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
             </a>
-            <a href="https://www.threads.net/@kirsten_uxui" target="_blank" title="Threads">
-                <i class="fa-brands fa-threads"></i>
+            <a href="https://www.threads.net/@kirsten_uxui" target="_blank">
+                <svg viewBox="0 0 192 192"><path d="M141.5 74.2c-2-2-4.1-3.6-6.5-4.8-2.4-1.2-5-1.8-7.8-1.8H127c-3 0-5.8.6-8.2 1.8s-4.5 2.8-6.3 4.8c-1.8 2-3.2 4.4-4.2 7.1-1 2.7-1.5 5.7-1.5 8.9 0 3.2.5 6.2 1.5 8.9 1 2.7 2.4 5.1 4.2 7.1 1.8 2 3.9 3.6 6.3 4.8 2.4 1.2 5.2 1.8 8.2 1.8h.2c2.8 0 5.3-.6 7.8-1.8 2.4-1.2 4.5-2.8 6.4-4.8s3.4-4.4 4.4-7.1c1-2.7 1.5-5.7 1.5-8.9 0-3.2-.5-6.2-1.5-8.9-1-2.7-2.4-5.1-4.4-7.1zm-14.3 27.5c-3.5 0-6.4-1.2-8.7-3.5s-3.5-5.2-3.5-8.7 1.2-6.4 3.5-8.7 5.2-3.5 8.7-3.5h.2c3.5 0 6.4 1.2 8.7 3.5s3.5 5.2 3.5 8.7-1.2 6.4-3.5 8.7-5.2 3.5-8.7 3.5h-.2z"/><path d="M166.4 89.2c0-5.1-.5-10.3-1.5-15.3s-2.6-9.8-4.8-14.3c-2.2-4.5-5.1-8.5-8.7-12s-7.8-6.3-12.7-8.3c-4.9-2-10.4-3.1-16.4-3.2h-3.3c-6 0-11.5 1-16.4 3.2-4.9 2-9.1 4.8-12.7 8.3s-6.5 7.5-8.7 12-3.8 9.3-4.8 14.3-1.5 10.2-1.5 15.3v13.6c0 5 .5 9.9 1.5 14.7s2.6 9.3 4.8 13.5c2.2 4.2 5.1 7.9 8.7 11.2s7.8 5.9 12.7 7.7c4.9 1.8 10.4 2.8 16.4 2.8h3.3c6 0 11.5-1 16.4-2.8 4.9-1.8 9.1-4.4 12.7-7.7s6.5-7 8.7-11.2 3.8-8.7 4.8-13.5 1.5-9.7 1.5-14.7V89.2zm-15.1 27.5c-.8 3.9-2.1 7.6-3.8 10.8-1.7 3.2-3.9 6-6.6 8.4-2.7 2.4-5.8 4.3-9.5 5.6-3.6 1.3-7.7 2-12.3 2h-1.8c-4.6 0-8.7-.7-12.3-2s-6.8-3.2-9.5-5.6c-2.7-2.4-4.9-5.2-6.6-8.4-1.7-3.2-3-6.9-3.8-10.8s-1.2-8-1.2-12.4V89.2c0-4.4.4-8.5 1.2-12.4s2.1-7.6 3.8-10.8c1.7-3.2 3.9-6 6.6-8.4 2.7-2.4 5.8-4.3 9.5-5.6s7.7-2 12.3-2h1.8c4.6 0 8.7.7 12.3 2s6.8 3.2 9.5 5.6c2.7 2.4 4.9 5.2 6.6 8.4 1.7 3.2 3 6.9 3.8 10.8s1.2 8 1.2 12.4v13.6c.1 4.4-.3 8.5-1.1 12.4z"/></svg>
             </a>
         </div>
     </section>
