--- a/post.html
+++ b/post.html
@@ -16,7 +16,7 @@
             padding-top: 100px;
         }
 
-        /* 僅更新 Nav Bar 以對齊 Resources 標準 */
+        /* ✨ 導覽列：始終對齊 Resources 標準 */
         nav { 
             position: fixed; top: 0; left: 0; width: 100%; height: 75px; 
             background: rgba(252, 252, 252, 0.85); 
@@ -33,20 +33,47 @@
         }
         nav a:hover { color: #111; }
 
-        /* 還原本來的容器寬度 */
-        .container { max-width: 800px; margin: 0 auto; padding: 20px 25px; }
+        /* ✨ 提議的優化間距與容器 */
+        .container { 
+            max-width: 750px; /* 最佳閱讀寬度 */
+            margin: 0 auto; 
+            padding: 40px 25px; 
+        }
 
-        /* 還原本來的標題樣式 */
-        .post-date { font-size: 14px; color: #888; margin-bottom: 10px; display: block; }
-        .post-title { font-size: 28px; font-weight: 700; margin-bottom: 30px; line-height: 1.3; }
+        /* ✨ 提議的標題字級優化 */
+        .post-date { 
+            font-size: 12px; 
+            color: #bbb; 
+            letter-spacing: 0.1em; 
+            display: block; 
+            margin-bottom: 15px; 
+        }
+        .post-title { 
+            font-size: 2.2rem; /* 增大標題級別 */
+            font-weight: 500; 
+            color: #111; 
+            line-height: 1.3; 
+            margin: 0 0 40px 0; 
+        }
 
-        /* 還原本來的內文樣式 */
-        .post-content { line-height: 1.8; font-size: 16px; }
-        .post-content p { margin-bottom: 20px; }
-        .post-content img { max-width: 100%; height: auto; margin: 20px 0; }
+        /* ✨ 提議的內文排版優化 */
+        .post-content { 
+            line-height: 2; /* 增加行高，提升閱讀舒適度 */
+            font-size: 16px; 
+            color: #444;
+            font-weight: 300;
+        }
+        .post-content p { margin-bottom: 30px; text-align: justify; }
+        .post-content img { 
+            max-width: 100%; 
+            height: auto; 
+            display: block;
+            margin: 40px auto; 
+            border: 1px solid #eee;
+        }
 
         footer {
-            padding: 60px 0 40px; text-align: center; 
+            padding: 80px 0 40px; text-align: center; 
             font-size: 9px; color: #ccc; letter-spacing: 0.3em;
             text-transform: uppercase;
         }
@@ -54,8 +81,8 @@
         @media (max-width: 600px) {
             nav { height: 65px; }
             nav a { margin: 0 10px; font-size: 11px; }
-            .container { padding: 15px 20px; }
-            .post-title { font-size: 22px; }
+            .container { padding: 30px 20px; }
+            .post-title { font-size: 1.8rem; }
         }
     </style>
 </head>
@@ -84,17 +111,24 @@
 
         async function loadPost() {
             try {
+                // 指向你的 posts 資料夾
                 const response = await fetch('posts/posts.json');
                 const posts = await response.json();
                 const post = posts.find(p => p.slug === slug);
 
                 if (post) {
+                    document.title = `${post.title} | DESIGN WITH KIRSTEN`;
                     document.getElementById('post-title').textContent = post.title;
                     document.getElementById('post-date').textContent = post.date;
 
+                    // 抓取 HTML 內容
                     const contentResponse = await fetch(`posts/${post.slug}.html`);
-                    const contentHtml = await contentResponse.text();
-                    document.getElementById('post-content').innerHTML = contentHtml;
+                    if (contentResponse.ok) {
+                        const contentHtml = await contentResponse.text();
+                        document.getElementById('post-content').innerHTML = contentHtml;
+                    } else {
+                        document.getElementById('post-content').innerHTML = "<p>Content not found.</p>";
+                    }
                 }
             } catch (error) {
                 console.error('Error loading post:', error);
