--- a/about.html
+++ b/about.html
@@ -35,12 +35,12 @@
 
         .container { max-width: 700px; margin: 0 auto; padding: 60px 25px; }
 
-        /* ✨ 個人檔案卡片設計 */
+        /* 個人檔案卡片 */
         .profile-card {
             background: #fff;
-            border: 1px solid #111; /* 延續全站直角黑框設計 */
+            border: 1px solid #111;
             padding: 80px 50px 50px;
-            margin-top: 70px; /* 為上方半疊頭像留空間 */
+            margin-top: 70px;
             position: relative;
             text-align: center;
         }
@@ -51,7 +51,7 @@
             object-fit: cover;
             border: 1px solid #111;
             position: absolute;
-            top: -65px; /* 頭像向上位移半個高度 */
+            top: -65px;
             left: 50%;
             transform: translateX(-50%);
             background: #fff;
@@ -63,30 +63,33 @@
         }
 
         .about-content {
-            text-align: justify; /* 文字對齊 */
+            text-align: justify;
             font-size: 1rem; color: #444; font-weight: 300;
             line-height: 2;
         }
         .about-content p { margin-bottom: 25px; }
 
-        /* CTA 按鈕區（在卡片內） */
+        /* ✨ 更新的 CTA 按鈕區 */
         .cta-btns {
             display: flex;
             justify-content: center;
-            gap: 15px;
+            gap: 20px;
             margin-top: 40px;
             border-top: 1px solid #eee;
             padding-top: 40px;
         }
         .cta-link {
-            padding: 12px 20px;
+            flex: 1; /* 讓兩個按鈕等寬 */
+            max-width: 250px;
+            padding: 15px 10px;
             border: 1px solid #111;
             color: #111;
             text-decoration: none;
             font-size: 11px;
             font-weight: 500;
-            letter-spacing: 0.1em;
+            letter-spacing: 0.05em;
             transition: 0.3s;
+            display: inline-block;
         }
         .cta-link:hover { background: #111; color: #fff; }
 
@@ -96,11 +99,20 @@
             letter-spacing: 0.3em; text-transform: uppercase;
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 650px) {
             nav { height: 65px; }
             .profile-card { padding: 70px 25px 40px; }
             .about-title { font-size: 1.3rem; }
-            .cta-btns { flex-direction: column; }
+            /* 手機端改為垂直排列，避免文字太擠 */
+            .cta-btns { 
+                flex-direction: column; 
+                align-items: center; 
+                gap: 12px;
+            }
+            .cta-link {
+                width: 100%;
+                max-width: 100%;
+            }
         }
     </style>
 </head>
@@ -132,8 +144,12 @@
             </div>
 
             <div class="cta-btns">
-                <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" class="cta-link">Instagram</a>
-                <a href="https://www.threads.net/@kirsten_uxui" target="_blank" class="cta-link">Threads</a>
+                <a href="https://www.instagram.com/kirsten_uxui/" target="_blank" class="cta-link">
+                    在 Instagram 看 Case Study
+                </a>
+                <a href="https://www.threads.net/@kirsten_uxui" target="_blank" class="cta-link">
+                    在 Threads 看 工作碎碎念
+                </a>
             </div>
         </div>
     </main>
