--- a/post.html
+++ b/post.html
@@ -16,7 +16,7 @@
             padding-top: 100px;
         }
 
-        /* 導覽列：對齊 Resources 標準 */
+        /* 導覽列：精準對齊 Resources 標準 */
         nav { 
             position: fixed; top: 0; left: 0; width: 100%; height: 75px; 
             background: rgba(252, 252, 252, 0.85); 
@@ -33,29 +33,45 @@
         }
         nav a:hover { color: #111; }
 
-        /* 內文排版：保留提議的高級感間距 */
-        .container { max-width: 750px; margin: 0 auto; padding: 40px 25px; }
-        #date { font-size: 12px; color: #bbb; letter-spacing: 0.15em; display: block; margin-bottom: 15px; text-transform: uppercase;}
-        #title { font-size: 2.2rem; font-weight: 500; color: #111; line-height: 1.3; margin: 0 0 50px 0; }
+        /* 內文容器與專業排版樣式 */
+        .container { max-width: 750px; margin: 0 auto; padding: 20px 25px; }
         
-        #content { line-height: 2; font-size: 16px; color: #444; font-weight: 300; }
-        #content p { margin-bottom: 30px; text-align: justify; }
-        #content img { max-width: 100%; height: auto; display: block; margin: 40px auto; border: 1px solid #eee; }
+        #post-date { 
+            font-size: 12px; color: #bbb; letter-spacing: 0.15em; 
+            display: block; margin-bottom: 10px; text-transform: uppercase;
+        }
+        #post-title { 
+            font-size: 2.2rem; font-weight: 500; color: #111; 
+            line-height: 1.3; margin: 0 0 40px 0; 
+        }
+
+        #post-content { 
+            line-height: 2; font-size: 16px; color: #444; font-weight: 300; 
+        }
+        #post-content p { margin-bottom: 25px; text-align: justify; }
+        #post-content img { 
+            max-width: 100%; height: auto; display: block; 
+            margin: 30px auto; border: 1px solid #eee; 
+        }
 
         .back-to-blog {
-            display: inline-block; margin-top: 60px; padding-top: 30px;
+            display: inline-block; margin-top: 50px; padding-top: 20px;
             border-top: 1px solid #eee; width: 100%;
-            text-decoration: none; color: #bbb; font-size: 12px;
+            text-decoration: none; color: #bbb; font-size: 11px;
             letter-spacing: 0.1em; transition: 0.3s;
         }
         .back-to-blog:hover { color: #111; }
 
-        footer { padding: 80px 0 40px; text-align: center; font-size: 9px; color: #ccc; letter-spacing: 0.3em; text-transform: uppercase; }
+        footer { 
+            padding: 60px 0 40px; text-align: center; 
+            font-size: 9px; color: #ccc; letter-spacing: 0.3em; 
+            text-transform: uppercase; 
+        }
 
         @media (max-width: 600px) {
             nav { height: 65px; }
-            .container { padding: 30px 20px; }
-            #title { font-size: 1.8rem; }
+            .container { padding: 15px 20px; }
+            #post-title { font-size: 1.7rem; }
         }
     </style>
 </head>
@@ -69,39 +85,40 @@
     </nav>
 
     <main class="container">
-        <span id="date"></span>
-        <h1 id="title"></h1>
-        <div id="content"></div>
+        <span id="post-date"></span>
+        <h1 id="post-title"></h1>
+        <div id="post-content"></div>
 
-        <a href="blog.html" class="back-to-blog">← Back to Blog List</a>
+        <a href="blog.html" class="back-to-blog">← Back to Blog</a>
     </main>
 
     <footer>&copy; 2025 DESIGN WITH KIRSTEN</footer>
 
     <script>
-        // 這段 JavaScript 邏輯完全還原你當初成功的版本
+        // 這段腳本嚴格遵循你最原本、可運作的邏輯
         const urlParams = new URLSearchParams(window.location.search);
         const slug = urlParams.get('slug');
 
         async function loadPost() {
             if (!slug) return;
             try {
-                const res = await fetch('posts/posts.json');
-                const posts = await res.json();
+                // 指向 posts.json
+                const response = await fetch('posts/posts.json');
+                const posts = await response.json();
                 const post = posts.find(p => p.slug === slug);
 
                 if (post) {
                     document.title = post.title + " | DESIGN WITH KIRSTEN";
-                    document.getElementById('title').innerText = post.title;
-                    document.getElementById('date').innerText = post.date;
+                    document.getElementById('post-title').textContent = post.title;
+                    document.getElementById('post-date').textContent = post.date;
 
-                    // 抓取 HTML 文章內容
-                    const contentRes = await fetch(`posts/${post.slug}.html`);
-                    const contentHtml = await contentRes.text();
-                    document.getElementById('content').innerHTML = contentHtml;
+                    // 指向正確的 HTML 片段
+                    const contentResponse = await fetch(`posts/${post.slug}.html`);
+                    const contentHtml = await contentResponse.text();
+                    document.getElementById('post-content').innerHTML = contentHtml;
                 }
-            } catch (e) {
-                console.error("載入失敗:", e);
+            } catch (error) {
+                console.error('Error:', error);
             }
         }
 
